--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
       <version>${cucumber.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
