--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.momentum</groupId>
-  <artifactId>automation-testing-bdd-framework</artifactId>
+  <groupId>com.fourteen31</groupId>
+  <artifactId>testing-framework</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>Automation Testing BDD Framework</name>
+  <name>Automation Testing Framework (BDD)</name>
   <!-- FIXME change it to the project's website -->
 <!--  <url>http://www.example.com</url>-->
 
