--- a/user-interface/pom.xml
+++ b/user-interface/pom.xml
@@ -35,12 +35,13 @@
       <version>${cucumber.version}</version>
     </dependency>
 
+<!--  FIXME: vunerability issues-->
     <!-- https://mvnrepository.com/artifact/log4j/log4j -->
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>log4j</groupId>-->
+<!--      <artifactId>log4j</artifactId>-->
+<!--      <version>1.2.17</version>-->
+<!--    </dependency>-->
 
 
   </dependencies>
